--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <a class="download-video">Download</a>
         </div>
     </div>
-    <script src="./index2.js" defer></script>
+    <script src="./index.js" defer></script>
 </body>
 
 </html>
