--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <div class="recorded-video-wrap hidden">
 
-        <video src="" class="recorded-video" autoplay></video>
+        <video src="" class="recorded-video" controls loop autoplay></video>
         <div class="flex">
             <a class="download-video">Download</a>
         </div>
