--- a/index.html
+++ b/index.html
@@ -1,29 +1,213 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Reco - The Recoreder</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Quicksand"
+      rel="stylesheet"
+    />
+    <style>
+      * {
+        box-sizing: border-box;
+        border: none;
+        background-color: transparent;
+        outline: none;
+        list-style: none;
+        text-decoration: none;
+        font-family: "Quicksand";
+        transition: all ease 0.2s;
+      }
+      html,
+      body {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Furkan Recorder</title>
-    <link href="./main.css" rel="stylesheet">
-</head>
+        margin: 0;
+        padding: 0 15px;
+        background-color: #000;
+        color: white;
+      }
 
-<body>
-    <h1>Furkan Recorder</h1>
+      video {
+        width: 100%;
+        max-width: 1000px;
+        background-color: #000;
+      }
+
+      .flex {
+        padding: 20px 0;
+        width: 100%;
+        max-width: 100px;
+        display: flex;
+        justify-content: space-between;
+      }
+      .header {
+        display: flex;
+        width: 95vw;
+        justify-content: space-between;
+        align-items: center;
+      }
+      .header>h2{
+        display: flex;
+        align-items: center;
+        &>img{
+            margin: 0 10px 0 0;
+        height: 50px;
+      }
+      }
+      
+      .header > button {
+        color: white;
+        border-radius: 6px;
+        background-color: #000;
+        padding: 10px 45px;
+        cursor: pointer;
+        &:hover{
+            background-color: #111;
+        }
+      }
+
+      .download-video {
+        width: 100%;
+        height: 50px;
+        max-width: 1000px;
+        background-color: black;
+        color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 6px;
+        text-decoration: none;
+        &:hover{
+            background-color: #111;
+        }
+      }
+
+      .recorded-video-wrap {
+        position: absolute;
+        left: auto;
+        top: 100px;
+        display: flex;
+        align-items: center;
+        width: 100%;
+        flex-direction: column;
+      }
+
+      .hidden {
+        visibility: hidden;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="header">
+      <h2><img src="./logo.png" alt=""> Reco - <small>The Recorder</small></h1>
+      <button class="start-stop">Start</button>
+    </div>
     <video src="" class="video-feedback" autoplay></video>
-    <div class="flex">
-
-        <button class="start-recording">Start</button>
-        <button class="stop-recording" disabled>Stop</button>
-    </div>
+    <div class="flex"></div>
     <div class="recorded-video-wrap hidden">
-
-        <video src="" class="recorded-video" controls loop autoplay></video>
-        <div class="flex">
-            <a class="download-video">Download</a>
-        </div>
+      <video src="" class="recorded-video" controls loop autoplay></video>
+      <a class="download-video">Download</a>
     </div>
-    <script src="./index.js" defer></script>
-</body>
 
+    <script>
+      let stream = null,
+        audio = null,
+        mixedStream = null,
+        chunks = [],
+        recorder = null,
+        startStopButton = null,
+        downloadButton = null,
+        recordedVideo = null;
+
+      async function setupStream() {
+        try {
+          stream = await navigator.mediaDevices.getDisplayMedia({
+            video: true,
+          });
+          audio = await navigator.mediaDevices.getUserMedia({
+            audio: {
+              echoCancellation: true,
+              noiseSuppression: true,
+              sampleRate: 44100,
+            },
+          });
+          if (stream) {
+          const video = document.querySelector(".video-feedback");
+          video.srcObject = stream;
+          video.play();
+        } else {
+          console.warn("No Stream available!");
+        }
+        } catch (error) {
+          console.log(error);
+        }
+      }
+
+      async function startRecording() {
+        await setupStream();
+        if (stream && audio) {
+          mixedStream = new MediaStream([
+            ...stream.getTracks(),
+            ...audio.getTracks(),
+          ]);
+          recorder = new MediaRecorder(mixedStream);
+          recorder.ondataavailable = handleDataAvailable;
+          recorder.onstop = handleStop;
+          recorder.start(200);
+          startStopButton.innerText = "Stop";
+          startStopButton.onclick = stopRecording;
+          console.log("Recording has started...");
+        } else {
+          console.log("No stream available");
+        }
+      }
+
+      function handleDataAvailable(e) {
+        chunks.push(e.data);
+      }
+
+      function stopRecording() {
+        recorder.stop();
+        startStopButton.innerText = "Start";
+        startStopButton.onclick = startRecording;
+        console.log("Recording has stoped.");
+      }
+      function handleStop() {
+        const blob = new Blob(chunks, {
+          type: "video/webm",
+        });
+        chunks = [];
+        downloadButton.href = URL.createObjectURL(blob);
+        downloadButton.download = "video.webm";
+        downloadButton.disabled = false;
+
+        recordedVideo.src = URL.createObjectURL(blob);
+        recordedVideo.load();
+        recordedVideo.onloadeddata = () => {
+          recordedVideo.play();
+
+          const rc = document.querySelector(".recorded-video-wrap");
+          rc.classList.remove("hidden");
+          rc.scrollIntoView({ behavior: "smooth", block: "start" });
+        };
+
+        stream.getTracks().forEach((track) => track.stop());
+        audio.getTracks().forEach((track) => track.stop());
+        console.log("REcording has beem saved...");
+      }
+
+      window.addEventListener("load", () => {
+        startStopButton = document.querySelector(".start-stop");
+        stopButton = document.querySelector(".stop-recording");
+        downloadButton = document.querySelector(".download-video");
+        recordedVideo = document.querySelector(".recorded-video");
+
+        startStopButton.onclick = startRecording;
+      });
+    </script>
+  </body>
 </html>
