--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         });
         chunks = [];
         downloadButton.href = URL.createObjectURL(blob);
-        downloadButton.download = "video.webm";
+        downloadButton.download = "video.mkv";
         downloadButton.disabled = false;
 
         recordedVideo.src = URL.createObjectURL(blob);
