--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <video src="" class="video-feedback" autoplay></video>
     <div class="flex"></div>
     <div class="recorded-video-wrap hidden">
-      <video src="" class="recorded-video" controls loop autoplay></video>
+      <video src="" class="recorded-video" controls  autoplay></video>
       <a class="download-video">Download</a>
     </div>
 
